# cpp-gtest

./: CMakeLists.txt  README.md
include/: duck.h
src/: CMakeLists.txt  duck.cpp  main.cpp
test/: CMakeLists.txt  duck_tests.cc  dummy_tests.cc  fly_tests.cc
